apps/argocd/overlays/staging/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.staging.lab.supermorphic.com`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
          scheme: https
          passHostHeader: true
          serversTransport:
            insecureSkipVerify: true
  tls:
    secretName: argocd-server-tls
