apps/argocd/overlays/staging/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-server
  namespace: argocd-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.staging.lab.supermorphic.com`)
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
  tls:
    passthrough: true
